unpackaged/main/default/objects/ETI_Vehicle_Service__c/ETI_Vehicle_Service__c.object-meta.xml
<CustomObject>
    <label>Vehicle Service</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>