unpackaged/main/default/objects/ETI_Vehicle_Service__c/fields/Is_More_Than_One_Lane_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_More_Than_One_Lane_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is More Than One Lane Applicable?</label>
    <type>Checkbox</type>
</CustomField>