unpackaged/main/default/objects/ETI_Vehicle_Service__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>ETI_Location__c</referenceTo>
    <relationshipLabel>Vehicle Services</relationshipLabel>
    <relationshipName>Vehicle_Services</relationshipName>
    <type>Lookup</type>
</CustomField>