unpackaged/main/default/objects/ETI_Vehicle_Service__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>