unpackaged/main/default/objects/ETI_Vehicle_Service__c/fields/Service_Premises__c.field-meta.xml
<CustomField>
    <fullName>Service_Premises__c</fullName>
    <label>Service Premises</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visit ET Premises</fullName>
            </value>
            <value>
                <fullName>Home/Office Premise</fullName>
            </value>
            <value>
                <fullName>Ocean/Island</fullName>
            </value>
            <value>
                <fullName>Customer Premises</fullName>
            </value>
            <value>
                <fullName>Customer Premises-B2B</fullName>
            </value>
            <value>
                <fullName>Home/Office Premise-B2B</fullName>
            </value>
            <value>
                <fullName>Ocean/Island-B2B</fullName>
            </value>
            <value>
                <fullName>WalkIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>