unpackaged/main/default/objects/ETI_Vehicle_Service__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Type</label>
    <referenceTo>ETI_Vehicle_Type__c</referenceTo>
    <relationshipLabel>Vehicle Services</relationshipLabel>
    <relationshipName>Vehicle_Services</relationshipName>
    <type>Lookup</type>
</CustomField>