unpackaged/main/default/objects/ETI_Vehicle_Service__c/recordTypes/Certificate.recordType-meta.xml
<RecordType>
    <fullName>Certificate</fullName>
    <active>true</active>
    <label>Certificate</label>
</RecordType>