unpackaged/main/default/objects/ETI_Vehicle_Service__c/recordTypes/Police_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Police_Inspection</fullName>
    <active>true</active>
    <label>Police Inspection</label>
</RecordType>