unpackaged/main/default/objects/ETI_Vehicle_Service__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Emirate__c</columns>
    <columns>Service_Code__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Premises__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>